--- a/src/compare.html
+++ b/src/compare.html
@@ -14,8 +14,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr
-        repeat.for="keyword of data | customSort: { propertyName: sort_property, direction: 'descending' } | filter:searchKeywordsTerm:filterKeywordsFunc"
+      <tr repeat.for="keyword of data | customSort: sort_property | filter:searchKeywordsTerm:filterKeywordsFunc"
         click.delegate="selectKeyword(keyword)">
         <td>${keyword["Keyword"]}</td>
         <td>${keyword["KeyVis"]}</td>
