Added keyword search

--- a/src/compare.html
+++ b/src/compare.html
@@ -1,4 +1,9 @@
 <template>
+  <div>
+    <i class="fad fa-search fa-2x" style="display: inline-block;vertical-align: middle;"></i>
+    <input type="text" class="form-control search-box" style="display: inline-block; width: 50%;"
+      value.bind="searchKeywordsTerm" placeholder="search Keywords..."></input>
+  </div>
   <table>
     <thead>
       <tr>
