--- a/src/compare.html
+++ b/src/compare.html
@@ -1,8 +1,10 @@
 <template>
   <div>
     <i class="fad fa-search fa-2x" style="display: inline-block;vertical-align: middle;"></i>
-    <input type="text" class="form-control search-box" style="display: inline-block; width: 50%;"
+    <input type="text" class="form-control search-box" style="display: inline-block; width: 25%;"
       value.bind="searchKeywordsTerm" placeholder="search Keywords..."></input>
+    <input type="text" class="form-control search-box" style="display: inline-block; width: 25%;"
+      value.bind="searchLabelsTerm" placeholder="search Labels..."></input>
     <button md-button click.delegate="setSortProperty('Overlap')">Sort by Author Agreement</button>
   </div>
   <table>
@@ -22,7 +24,8 @@
       </tr>
     </thead>
     <tbody>
-      <tr repeat.for="keyword of data | customSort: sort_property | filter:searchKeywordsTerm:filterKeywordsFunc"
+      <tr
+        repeat.for="keyword of data | customSort: sort_property | filter:searchKeywordsTerm:filterKeywordsFunc | filter:searchLabelsTerm:filterLabelsFunc"
         click.delegate="selectKeyword(keyword)" css="background-color: ${getAgreementColor(keyword['Overlap'])}">
         <td repeat.for="property of properties">${keyword[property]}</td>
         <!-- <td>${keyword["Keyword"]}</td>
