started refactoring but wait until necessary

--- a/src/app.html
+++ b/src/app.html
@@ -2,5 +2,5 @@
   <require from="custom.css"></require>
   <require from="materialize-css/dist/css/materialize.css"></require>
   <require from="@fortawesome/fontawesome-pro/css/all.css"></require>
-  <compose view-model="./compare"></compose>
+  <compose view-model="./views/compare"></compose>
 </template>
