Basic author comparison chart

--- a/src/app.html
+++ b/src/app.html
@@ -3,4 +3,5 @@
   <require from="materialize-css/dist/css/materialize.css"></require>
   <require from="@fortawesome/fontawesome-pro/css/all.css"></require>
   <compose view-model="./views/compare"></compose>
+  <compose view-model="./views/codertable"></compose>
 </template>
